# cs132-elevator

./: .gitignore  LICENSE  README.md  README.txt  packaging.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ElevatorNaiveTestCase/: readme.txt
ElevatorNaiveTestCase/TestCase/: Server.py  main.py
ElevatorNaiveTestCase/YourCodeExample/: NetClient.py
YourCodeExample/: NetClient.py
doc/Reqirement/: requirements.md
doc/Specification/: spec.md  specification.md
doc/Traceability/: traceability.md
doc/UserManual/: UserManual.md
doc/WeeklyReport/: Week4.md
doc/requirement/: requirement.md  requirements.md
doc/specification/: specification.md
doc/traceability/: traceability.md
doc/user_manual/: user_manual.md
doc/validation/: validation.md
doc/validation_doc/: val_doc.md  validation.md  validation_doc.md
doc/weekly_reports/: week-04.md  week-05.md  week-07.md
docs/: requirement.md  specification.md  traceability.md  user_manual.md  validation.md
docs/ref/: guidance.md  requirement.md  specification.md  traceability.md  user_manual.md
docs/weekly_reports/: week-06.md  week-08.md
release/: packaging.spec  requirements.txt
src/: elevator.py  main.py  net_client.py  scheduler.py
src/UPPAAL/: single_p.q  single_p.xml
src/backend/: __init__.py  api.py  bridge.py  dispatcher.py  elevator.py  engine.py  models.py  net_client.py  server.py  simulator.py  utility.py  world.py
src/frontend/: bridge.py  webview.py
test/: main.py  server.py
test/api/: main.py  server.py
test/gui/: conftest.py  test_basic.py  (+2 more)
(+83 files in other folders)
