[project]
name = "cs132-elevator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.52.0",
    "pyqt6>=6.9.0",
    "pyqt6-webengine>=6.9.0",
    "pytest-playwright>=0.7.0",
    "pyzmq>=26.4.0",
    "websockets>=15.0.1",
]
